# claude-session-search

./: CLAUDE.md  README.md  claude_session_search.py  pyproject.toml
docs/plans/: 2026-03-31-claude-session-search.md
skills/searching-session-transcripts/: SKILL.md
tests/: test_extract_messages.py  test_format_json.py  test_format_terminal.py  test_integration.py  test_resolve_project.py  test_search.py  test_search_engine.py  test_session_index.py
